--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "next": "^14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "typescript": "5.2.2"
   },
   "devDependencies": {
