--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./app/*"
+      "styles/*": [
+        "./app/styles/*"
       ]
     }
   },
