--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal_portfolio",
+  "name": "selvensi",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "next": "^14.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "server-only": "^0.0.1",
-    "typescript": "5.2.2"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.0.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4"
   }
 }
